2001-01-22  Rebecca Schulman  <rebecka@eazel.com>
       Fix bug 5316, that search results code has
	empty strings marked for translation.

	* libnautilus-extensions/nautilus-search-uri.c: (parse_uri):
	Remove "prefixes" for search criteria that were
	always blank.

2001-01-22  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Fix bug 5831 - Clipping problems in summary view draing scrollable
	labels.
	
	* libnautilus-extensions/Makefile.am:
	* libnautilus-extensions/nautilus-viewport.c:
	(nautilus_viewport_initialize_class),
	(nautilus_viewport_initialize), (nautilus_viewport_draw),
	(nautilus_viewport_paint), (nautilus_viewport_new):
	* libnautilus-extensions/nautilus-viewport.h:
	New files.  A sublcass of GtkViewport that takes into account the
	width and height of the widget style xthickness and ythickness
	when painting.

	* components/services/summary/nautilus-view/nautilus-summary-view.c
	: (generate_summary_form):
	Use NautilusViewport instead of GtkViewport to avoid clipping
	problems when painting labels inside scrollable viewports.

2001-01-22  Josh Barrow  <josh@eazel.com>

	* icons/crux_eggplant/.cvsignore:
	* icons/crux_eggplant/backgrounds/.cvsignore:
	* icons/crux_eggplant/sidebar_tab_pieces/.cvsignore:
	* icons/crux_eggplant/throbber/.cvsignore:

	Make CVS shutup.

2001-01-22  Mike Fleming  <mfleming@eazel.com>

	* components/mozilla/nautilus-mozilla-content-view.c:
	(mozilla_dom_key_press_callback),
	(mozilla_dom_mouse_click_callback):

	Bug 5905: Softcat Search button doesn't work.

	I don't know when this stopped working but maybe it was while I
	was dorking with the key-initiated-navigation.

	Anyway, I polished stuff up to use the real constants for indicating
	to Moz whether to handle events or not.  This problem went away and
	everything else seemed to continue to work as expected.
	
2001-01-22  Stanislav Brabec  <utx@penguin.cz>

	* configure.in: Added support for db1 emulation in Berkeley DB3.